<?xml version="1.0"?>
<package>
  <name>rflysim_px4_node</name>
  <version>0.1.0</version>
  <description>
    compute px4_cmd from ego-planner 
  </description>
  <author>ding</author>
  <maintainer email="matia.pizzoli@gmail.com">Matia Pizzoli</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
</package>
